# ChangeLog for dev-ruby/domain_name
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/domain_name/ChangeLog,v 1.18 2014/03/25 14:53:48 mrueg Exp $

*domain_name-0.5.17 (25 Mar 2014)

  25 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +domain_name-0.5.17.ebuild,
  -domain_name-0.5.14.ebuild, -domain_name-0.5.15.ebuild:
  Version bump. Cleanup old.

*domain_name-0.5.16 (13 Feb 2014)

  13 Feb 2014; Manuel Rüger <mrueg@gentoo.org> +domain_name-0.5.16.ebuild:
  Version bump.

*domain_name-0.5.15 (18 Nov 2013)

  18 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +domain_name-0.5.15.ebuild:
  Version bump. Add ruby20.

*domain_name-0.5.14 (19 Oct 2013)

  19 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +domain_name-0.5.14.ebuild,
  -domain_name-0.5.12.ebuild:
  Version bump. Cleanup old.

  15 Sep 2013; Agostino Sarubbo <ago@gentoo.org> domain_name-0.5.13.ebuild:
  Stable for x86, wrt bug #483694

  15 Sep 2013; Agostino Sarubbo <ago@gentoo.org> domain_name-0.5.13.ebuild:
  Stable for amd64, wrt bug #483694

*domain_name-0.5.13 (18 Aug 2013)

  18 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +domain_name-0.5.13.ebuild,
  -domain_name-0.5.11.ebuild:
  Version bump. Cleanup old.

*domain_name-0.5.12 (14 Jul 2013)

  14 Jul 2013; Hans de Graaff <graaff@gentoo.org> +domain_name-0.5.12.ebuild:
  Version bump.

  14 Jul 2013; Hans de Graaff <graaff@gentoo.org> -domain_name-0.5.6.ebuild,
  -domain_name-0.5.7.ebuild:
  Cleanup.

*domain_name-0.5.11 (01 May 2013)

  01 May 2013; Hans de Graaff <graaff@gentoo.org> +domain_name-0.5.11.ebuild:
  Version bump.

*domain_name-0.5.7 (02 Feb 2013)

  02 Feb 2013; Hans de Graaff <graaff@gentoo.org> +domain_name-0.5.7.ebuild:
  Version bump.

  02 Feb 2013; Hans de Graaff <graaff@gentoo.org> -domain_name-0.5.3.ebuild,
  -domain_name-0.5.4.ebuild:
  Cleanup.

*domain_name-0.5.6 (16 Dec 2012)

  16 Dec 2012; Hans de Graaff <graaff@gentoo.org> +domain_name-0.5.6.ebuild:
  Version bump.
