@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST domain_name-0.5.13.gem 81408 SHA256 bbafaaf2d663a9985d99d7b35b92bd0dbff2bfa35e3e92c075ad2e2199daa754 SHA512 a9d89fd90a195402bf4c14a7bc53a6478b958877af2e4e3f0651b36adda5fef74dd54f9afb19709dabdc6997e6bd1a7220e4baa6ff42d9531fc30d41ec8a6860 WHIRLPOOL 3dd254689730cb908313f16b2f9530c8b4cd4837579018841ec7502333519200062873a7eb415195ef2aed8d0ea89a6d783ed6b894157e2a2bb7f1138be85767
 DIST domain_name-0.5.16.gem 87040 SHA256 ac0a58faac65a33dad514a4dc7ae40d0b7a391d99fdf96ca9f1b8f887a3f1011 SHA512 a3b78269a706083331f4a6dfa2f3a72153cf1c6ace64c4321137a3728e151be5795e27ccea8fde7b3ae331861af583a85e8255e84f2c09b7b0f1d01008a6096b WHIRLPOOL 525d161e13355c9581888e96da9993c7b131e9d4a50f72939305f2db2ed4711b58f423f2c9d8151d75874f8221c5476b1cfe72f3fef3bcfa7ce3a13b3b33354f
 DIST domain_name-0.5.17.gem 89600 SHA256 10905b25c882b2b3930047d56c7b398511ca054f2fe11ec9c0f349be5f6dcce7 SHA512 7aa78189ef8e81b70e3c32d660cd711283bbb06e63b6cd7af19a295884838395bebeadc96469f139afd173d8b5a7319f690ac185f5a5b810b020250eec053bb3 WHIRLPOOL dafa44ed372d5320d23bfff353d2e80293d706e9c54f603349dd1ef343291495ca80e8c126d5da9c2a2058d3e4a8bbec8d110ab86c261048a1373915fc2dc877
+DIST domain_name-0.5.18.gem 89600 SHA256 d8c4110c2bd2bb6f35e173147171aa2e8a0c8bf7eb249d6b0a47e5eea163e0c0 SHA512 5642b006d275b645e48de344df9e028f906bc5509950b7e011ca4ab91e8b40bd771307933893c077dabce53f0b04308cd6354e1bc22bc7fe600bbffed918cf57 WHIRLPOOL a1fb7b5b3d6c1be454ad0a935e27ecc6986c6a39cc78b296c9333210230a1d396f65c4c383c9cd66955dd426498141bc4553be12e96d5384a0ca43f2f3a07661
 EBUILD domain_name-0.5.13.ebuild 1190 SHA256 9510727dd4c5384baf7d64b1f63ea1ff5a08d1b0f27ddf1d415d2c6826b1b5da SHA512 70ce122731d045c13252f3c115e9c4b3b6f24923dbb9e74e56832fa260e96e69538939eb92d46a1123efd3d788d8b497fcc065e55e845d06e3c8c4d61d78948b WHIRLPOOL a9c861f63adca99dfabdc2112949563d20fe4b57383425178e8b3325d73fd9feb544b50718556300edae758a6b6d71bf9f4fc1feee8e200bb957c4ddb0154d3e
 EBUILD domain_name-0.5.16.ebuild 1201 SHA256 a5fec49addace4b700da5a6cd319f941f5a6eac9953c635aec8408e0648ddb7f SHA512 e94a4490ad7abc0e87dc1a8c46245cf35f482fe615d8a93ff9d8eb87ef6f018c589a572a0a061c46db5648ed2ee323f32d85080585380afea1e78adbe8c1874e WHIRLPOOL b76d0a2737ca44ddf848e72f690dc792cd0fbc654dd5d3217caa999cb688cd36b1291462ee89ae628084fb0aeb7d26b879f45e413cf50209340b15d3158087ad
 EBUILD domain_name-0.5.17.ebuild 1194 SHA256 3064a409fc78c54d97ca18333202c29c178d11223234618e39ababcdfc7ba046 SHA512 cc8ed5288ee14c81070c42836b15f08466c56c132c34fc822414a9ae007f5d4fbd8104145357fb51aaab4c9158520ce266459340bba8518b9933989d2a48da35 WHIRLPOOL bf3688b31208f7063685a1ab18f3cbaf98a89846b25af6af66c7fa7ec52cc5a5d1693c12957248289664af892bf7f09c6e3adad6fa90eb2ba7cf60fd9581e000
-MISC ChangeLog 2651 SHA256 3aeda1f5cee1a0fcac46a308de041fa04539370bf03e28b93f732e3e7fb7dd0a SHA512 fb120b687e2f73dcb6a74606ab2538e2cf8c0d8f8cc6bf8add32320fe848bec32e56b2b5e507a0ed50ed284c8baa3a26adc6f31ddaca4df545610528080f20e0 WHIRLPOOL 0e38bb0af123d256c44018216da82c666eb9a0facb0ffca7b4dd71c4509c0ad3cbd8b18bacf769bf5e182795966c01939c8dc44d264a278b1c81281e6cb61765
+EBUILD domain_name-0.5.18.ebuild 1195 SHA256 9a9035b4898ac734dce87d4627e4812f0127091e4f9545b17412ecdf62316bd2 SHA512 7258a1729fda3f43b88ee4a075eb333d549ad3268152d5aaff8024da2842226f778cf7c7f61e16abc2abdb88080ede3c1afa398c4318c5a87e5560e580139d54 WHIRLPOOL e2658b8e650a0e056a3ee2bc7fa728204349060dd2c6b14deadc913190590303c09f05eebc5fb82bb06699319cffa24db25e7478f8364e112dc81d252ab69698
+MISC ChangeLog 2782 SHA256 e38bf857b0f64be02960cb224a9b9758e2357d45e66165528ffcacd54fa07998 SHA512 c51f1767d59d8009b34cbc8c921951ec1c33bba1c23bfeff76f528347c13098c19207747d2e420ca2a66245b3511ebfbb20ea01e5cf133e1c55523bb7e438167 WHIRLPOOL e12e9b152efd1f32fa23cc34f8517cd0795ccd815e1add68107a766f2a75a57f1c2bc87a332ce95c50f586eb648ceeb48aebae144395af99e03e89790d9ed093
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlM1HdcACgkQiIP6VqMIqNe8mwD7BZUzWixLwxkDYtg00U0GmBwZ
+n18dgvOAaM+Ag74R9I4A/RCDG8CQg7mPbCOPOqUzJOtEU9ju2XHJykUPXZZWR/E1
+=P6R8
+-----END PGP SIGNATURE-----
