@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/domain_name
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/domain_name/ChangeLog,v 1.18 2014/03/25 14:53:48 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/domain_name/ChangeLog,v 1.19 2014/03/28 06:59:30 graaff Exp $
+
+*domain_name-0.5.18 (28 Mar 2014)
+
+  28 Mar 2014; Hans de Graaff <graaff@gentoo.org> +domain_name-0.5.18.ebuild:
+  Version bump.
 
 *domain_name-0.5.17 (25 Mar 2014)
 
